<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.cardCampanhaOngActivity">

    <ImageButton
        android:id="@+id/cardFavoritar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        android:contentDescription="@string/content_description_imageButton_cardFavoritar"
        android:src="@drawable/ic_action_doador_favoritar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:text="@string/text_cardDescricao"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImagemCampanha" />

    <TextView
        android:id="@+id/cardTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/text_cardTitulo"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cardFavoritar"
        app:layout_constraintStart_toEndOf="@+id/cardImagemCampanha"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardTimeStamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/text_cardTimeStamp"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/cardFavoritar"
        app:layout_constraintStart_toEndOf="@+id/cardImagemCampanha"
        app:layout_constraintTop_toBottomOf="@+id/cardTitulo" />

    <ImageView
        android:id="@+id/cardImagemCampanha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_imageView_cardImagemCampanha"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardQuantidadeItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_cardQuantidadeItens"
        android:textColor="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDescricao" />

    <LinearLayout
        android:id="@+id/cardCampanhaDoadorItens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardQuantidadeItens">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/cardItemValorAtualProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cardItemValorAutalProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/cardItemProgressBar"
                app:layout_constraintStart_toStartOf="@+id/cardItemProgressBar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardItemTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cardItemTitulo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardItemValorAtualProgressBar"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="58dp" />

            <ProgressBar
                android:id="@+id/cardItemProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardItemMaxValorProgressBar"
                app:layout_constraintStart_toEndOf="@+id/cardItemTitulo"
                app:layout_constraintTop_toBottomOf="@+id/cardItemValorAtualProgressBar" />

            <TextView
                android:id="@+id/cardItemMaxValorProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cardItemMaxValorProgressBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardItemValorAtualProgressBar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>